test/cases/global_variable_redeclaration.zig
// dummy comment
var foo = false;
var foo = true;

// error
//
// :3:1: error: redeclaration of 'foo'
// :2:1: note: other declaration here
